test/error/0004-macroredef.c
/*
PATTERN: redefinition
PATTERN: 7
*/

#define X 1
#define X 2

